--- a/styles/Estilo_PokeShop.css
+++ b/styles/Estilo_PokeShop.css
@@ -1,47 +1,67 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-
-body{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(to top, rgba(16,16,98,0.729) 0%, rgba(65,9,9,0.805)100%),url(/image/PokeShop.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;    
-}
-
-.navbar{
-    background-image: linear-gradient(to top,#fafbfb,#fffacd 50%);
-}
-
-.PokeShop{
+.LogoPika1{
     position: relative;
-    color: rgba(255,0,0,0.6);
+    width: 250px;
+    height: 250px;
+    bottom: 280px;
+    right: 345px;
+}
+
+.LogoPika2{
+    position: relative;
+    width: 250px;
+    height: 250px;
+    bottom: 280px;
+    left: 590px;
+}
+
+
+.InfoS{
+    position: relative;
+    width: 800px;
+    margin: 25px;
+    padding: 30px;
+    left: 487px;
+}
+
+.InfoS h1{
     text-align: center;
-    font-size: 35px;
-    bottom: 2px;
+    margin-bottom: 30px;
+    color: #fff8e7;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
-.Opcion{
-    position: relative;
-    margin-right: 20px;
-    margin-left: 20px;
-    color: rgba(0,0,255,0.6);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.InfoS p{
     text-align: center;
-    font-size: 25px;
-    top: 2px;
-    left: 10px;
+    color: #fff8e7;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 22px;
 }
 
-.Carrito{
+.row{
     position: relative;
-    bottom: 2px;
-    left: 750px;
-    font-size: 25px;
+    bottom: 260px;
+    margin: 0px !important;
+}
+
+.TituloP{
+    position: relative;
+    color: #fff8e7;
+    text-align: center;
+    bottom: 290px;
+}
+
+.card{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-image: linear-gradient(to top,rgba(0,0,255,0.6),rgba(255,0,0,0.6));
+   
+}
+
+.card-img-top{
+    width: 180px !important;
+    height: 180px !important;
+    margin-top: 20px;
+    position: relative;
+    left: 50px;
 }
