--- a/styles/Estilo_Compra.css
+++ b/styles/Estilo_Compra.css
@@ -1,12 +1,75 @@
 .TituloPo{
     position: relative;
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff8e7;
     top: 25px;
 }
 
-.card{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-image: linear-gradient(to top,rgba(0,0,255,0.6),rgba(255,0,0,0.6));  
+.Container{
+    position: relative;
+    width: 1340px;
+    padding: 80px;
+    margin: 5px;
+    height: 740px;
+    bottom: 50px;
+    right: 35px;
 }
+
+.Pokemon-container{
+    display: grid;
+    grid-template-columns: 420px 420px 420px;
+    grid-template-rows: 230px 230px 230px;
+}
+
+.pokemon-block{
+    width: 400px;
+    height: 220px;
+    padding: 10px;
+    margin-bottom: 30px;
+    background-image: linear-gradient(to top,rgba(247,62,62,1),#fff8e7 100px,rgba(0,0,255,1));
+    border: outset;
+    border-radius: 20px;
+}
+
+img{
+    position: relative;
+    top: 6px;
+    left: 3px;
+    width: 150px;
+    height: 130px;
+    background-image: url(/image/PokeBallA.png);
+    background-position: center;
+    background-size: 188px;
+}
+
+p{
+    position: relative;
+    width: 210px;
+    bottom: 130px;
+    margin: 6px;
+    left: 160px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+    color: black;
+    background-color: rgba(155,146,146,0.7);
+    border: solid;
+    border-radius: 20px;
+    border-color: rgba(204,197,197,1);
+    
+}
+
+.btn{
+
+    position: relative;
+    bottom: 15px;
+    left: 545px;
+    font-size: 20px;
+
+}
+
+
+
+
