--- a/styles/Estilo_Fondo_y_Navbar.css
+++ b/styles/Estilo_Fondo_y_Navbar.css
@@ -23,25 +23,25 @@ body{
     position: relative;
     color: rgba(255,0,0,0.6);
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     bottom: 2px;
 }
 
 .Opcion{
     position: relative;
-    margin-right: 20px;
-    margin-left: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     color: rgba(0,0,255,0.6);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    font-size: 25px;
-    top: 2px;
-    left: 10px;
+    font-size: 20px;
+    top: 1px;
+    left: 2px;
 }
 
 .Carrito{
     position: relative;
-    bottom: 2px;
-    left: 740px;
-    font-size: 25px;
+    bottom: 1px;
+    left: 540px;
+    font-size: 20px;
 }
